; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/lsm1/extr_lsm_file.c_fsNextPageOffset.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/lsm1/extr_lsm_file.c_fsNextPageOffset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_7__ = type { i64 }

@LSM_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_8__*, %struct.TYPE_7__*, i64, i32, i64*)* @fsNextPageOffset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fsNextPageOffset(%struct.TYPE_8__* %0, %struct.TYPE_7__* %1, i64 %2, i32 %3, i64* %4) #0 {
  %6 = alloca %struct.TYPE_8__*, align 8
  %7 = alloca %struct.TYPE_7__*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %6, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  store i64* %4, i64** %10, align 8
  %13 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @assert(i32 %15)
  %17 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %19 = load i64, i64* %8, align 8
  %20 = load i32, i32* %9, align 4
  %21 = sub nsw i32 %20, 1
  %22 = call i32 @fsAddOffset(%struct.TYPE_8__* %17, %struct.TYPE_7__* %18, i64 %19, i32 %21, i64* %11)
  store i32 %22, i32* %12, align 4
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %24 = icmp ne %struct.TYPE_7__* %23, null
  br i1 %24, label %25, label %32

25:                                               ; preds = %5
  %26 = load i64, i64* %11, align 8
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = icmp eq i64 %26, %29
  br i1 %30, label %31, label %32

31:                                               ; preds = %25
  store i64 0, i64* %11, align 8
  br label %42

32:                                               ; preds = %25, %5
  %33 = load i32, i32* %12, align 4
  %34 = load i32, i32* @LSM_OK, align 4
  %35 = icmp eq i32 %33, %34
  br i1 %35, label %36, label %41

36:                                               ; preds = %32
  %37 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %38 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %39 = load i64, i64* %11, align 8
  %40 = call i32 @fsAddOffset(%struct.TYPE_8__* %37, %struct.TYPE_7__* %38, i64 %39, i32 1, i64* %11)
  store i32 %40, i32* %12, align 4
  br label %41

41:                                               ; preds = %36, %32
  br label %42

42:                                               ; preds = %41, %31
  %43 = load i64, i64* %11, align 8
  %44 = load i64*, i64** %10, align 8
  store i64 %43, i64* %44, align 8
  %45 = load i32, i32* %12, align 4
  ret i32 %45
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @fsAddOffset(%struct.TYPE_8__*, %struct.TYPE_7__*, i64, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
